# zip2epub

./: .gitignore  README.md  comicz2e.py  config.toml  cover.py  ehentai.py  ehentaiz2e.py  main.py  mian.py  rsz.py  simple.py  spider_c.py  spider_h.py  spider_zip.py  window.py  z2book.py  z2bookobj.py  zip2epubobj.py  zip2pdf.py  zip2pdf.spec
lib/: comicz2e.py  ehentaiz2e.py  rsz.py  zip2epubobj.py
zip2epub/: pyproject.toml  setup.cfg
zip2epub/zip2epub/: __init__.py  comicz2e.py  ehentaiz2e.py  main.py  rsz.py  z2bookobj.py  zip2epub.py
zip2epub/zip2epub.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
zip2epub/zip2pdf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
zip2pdf/: pyproject.toml  setup.cfg
zip2pdf/zip2pdf/: cli.py  zip2pdf.py
zip2pdf/zip2pdf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
