[metadata]
name = zip2epub
version = 0.1.0
author = szoloa
description = A short description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/szoloa/zip2epub
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.6
install_requires =
    setuptools
    ebooklib
    pillow
    toml

[options.entry_points]
console_scripts =
    zip2epub = zip2epub.main:cli